tests/NormalTests/paczka1/small_fuzzy/41818682.err
Error in line 1: A960 S959 30,4
Error in line 6: 0ZlQ A191 1438,6
Error in line 15: 0ZlQ S959 14,6
